--- a/templates/payment.html
+++ b/templates/payment.html
@@ -194,7 +194,7 @@
             }
 
             const options = {
-              key: "rzp_test_aAhXUWNLte2RJ5",
+              key: "rzp_live_WSY3KvkCinrbRo",
               amount: data.amount,
               currency: "INR",
               name: "TechWeld",
